--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.5",
+    "@angular/animations": "^8.2.14",
+    "@angular/cdk": "^8.2.3",
     "@angular/common": "~8.2.5",
     "@angular/compiler": "~8.2.5",
     "@angular/core": "~8.2.5",
@@ -19,7 +20,26 @@
     "@angular/platform-browser": "~8.2.5",
     "@angular/platform-browser-dynamic": "~8.2.5",
     "@angular/router": "~8.2.5",
+    "@auth0/angular-jwt": "^3.0.1",
+    "@fortawesome/angular-fontawesome": "^0.5.0",
+    "@fortawesome/fontawesome-free": "^5.12.0",
+    "@ngrx/effects": "^8.5.2",
+    "@ngrx/entity": "^8.5.2",
+    "@ngrx/store": "^8.5.2",
+    "@ngrx/store-devtools": "^8.5.2",
+    "@types/underscore": "^1.9.4",
+    "bootstrap": "^4.3.1",
+    "font-awesome": "^4.7.0",
+    "foundation-sites": "^6.6.1",
+    "jquery": "3.4.1",
+    "moment": "^2.24.0",
+    "ngrx-store-logger": "^0.2.4",
+    "ngx-bootstrap": "^5.2.0",
+    "ngx-infinite-scroll": "^8.0.1",
+    "ngx-perfect-scrollbar": "^8.0.0",
+    "ngx-spinner": "^8.0.3",
     "rxjs": "~6.4.0",
+    "sweetalert2": "^9.5.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
